adding play btn

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -16,9 +16,10 @@ let cover_url = cover ? cover : "https://dpapp.bitqba.com/media/podcasts/dpapp/c
       <p class="py-1 text-1xl">{desc}</p>
     </div>
     <button class="btn btn-circle mx-2">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-        ><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg
-      >
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-player-play-filled" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" stroke-width="0" fill="currentColor"></path>
+     </svg>
     </button>
   </div>
   <hr class="my-3" />
