--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,13 @@ import { getCollection } from "astro:content";
 import astropodConfig from "./../../astropod.conf.cjs";
 import HeaderCard from "../components/HeaderCard.astro";
 
-console.log(astropodConfig);
-
 const posts = (await getCollection("podcast")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
 const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout>
-  <HeaderCard />
+  <HeaderCard title={astropodConfig.name} subtitle={astropodConfig.owner} />
 
   <div class="card min-w-full bg-base-100 shadow-md p-3 pb-3 mt-12">
     {
