--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import astropodConfig from "./../../astropod.conf.cjs";
 import HeaderCard from "../components/HeaderCard.astro";
+import AudioPlayer from "../components/audioPlayer.astro";
 
 const posts = (await getCollection("podcast")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
@@ -28,3 +29,13 @@ const last_posts = posts.slice(0, 3);
     }
   </div>
 </BaseLayout>
+
+<!-- <div class="sticky w-full bottom-0 bg-base-100">
+  <div>
+    <audio id="Test_Audio" controls class="w-full bg-base-200">
+      <source src="/audio/musica.mp3" />
+    </audio>
+  </div>
+</div> -->
+
+<AudioPlayer />
