--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -1,19 +1,132 @@
 <div id="audio-player-container" class="w-full bottom-0 sticky bg-base-100 flex px-5 h-16 items-center">
   <audio src="/audio/musica.mp3" preload="metadata"></audio>
-  <button id="play-icon">Play</button>
+  <button id="play-icon">
+    <div id="play-icon-svg">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-player-play-filled"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path
+          d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z"
+          stroke-width="0"
+          fill="currentColor"></path>
+      </svg>
+    </div>
+    <div id="pause-icon-svg" class="hidden">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-player-pause-filled"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path
+          d="M9 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
+          stroke-width="0"
+          fill="currentColor"></path>
+        <path
+          d="M17 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
+          stroke-width="0"
+          fill="currentColor"></path>
+      </svg>
+    </div>
+  </button>
   <span id="current-time" class="ml-5 mr-2">0:00</span>/
   <span id="duration" class="ml-2">0:00</span>
-  <input id="seek-slider" type="range" min="0" max="100" value="40" class="range range-xs mx-5" />
-  <button id="play-icon2" class="ml-5">mute</button>
+  <input id="seek-slider" type="range" min="0" max="100" value="0" class="range range-xs mx-5" />
+  <button id="mute-icon" class="ml-5">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="icon icon-tabler icon-tabler-volume"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <path d="M15 8a5 5 0 0 1 0 8"></path>
+      <path d="M17.7 5a9 9 0 0 1 0 14"></path>
+      <path d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5"
+      ></path>
+    </svg>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="icon icon-tabler icon-tabler-volume-off hidden"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <path d="M15 8a5 5 0 0 1 1.912 4.934m-1.377 2.602a5 5 0 0 1 -.535 .464"></path>
+      <path d="M17.7 5a9 9 0 0 1 2.362 11.086m-1.676 2.299a9 9 0 0 1 -.686 .615"></path>
+      <path
+        d="M9.069 5.054l.431 -.554a.8 .8 0 0 1 1.5 .5v2m0 4v8a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l1.294 -1.664"
+      ></path>
+      <path d="M3 3l18 18"></path>
+    </svg>
+  </button>
+  <div class="dropdown dropdown-top dropdown-end ml-5 h-6">
+    <button tabindex="0">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-dots-vertical"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+        <path d="M12 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+        <path d="M12 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+      </svg>
+    </button>
+    <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+      <li><a>Download</a></li>
+    </ul>
+  </div>
 </div>
 
 <script>
   const playIconContainer = document.getElementById("play-icon");
+  const muteIconContainer = document.getElementById("mute-icon");
+
   let playState = "play";
+  let isMuted = false;
 
   const audio = document.querySelector("audio");
   const durationContainer = document.getElementById("duration");
   const currentTimeContainer = document.getElementById("current-time");
+  const playIcon = document.getElementById("play-icon-svg");
+  const pauseIcon = document.getElementById("pause-icon-svg");
   const seekSlider = document.getElementById("seek-slider");
 
   const calculateTime = (secs) => {
@@ -36,12 +149,21 @@
     });
   }
 
+  muteIconContainer.addEventListener("click", () => {
+    isMuted = !isMuted;
+    audio.muted = isMuted;
+  });
+
   playIconContainer.addEventListener("click", () => {
     if (playState === "play") {
       audio.play();
+      pauseIcon.classList.remove("hidden");
+      playIcon.classList.add("hidden");
       playState = "pause";
     } else {
       audio.pause();
+      playIcon.classList.remove("hidden");
+      pauseIcon.classList.add("hidden");
       playState = "play";
     }
   });
@@ -58,20 +180,4 @@
     seekSlider.value = Math.floor(audio.currentTime);
     currentTimeContainer.textContent = calculateTime(seekSlider.value);
   });
-
-  //   const seekableAmount = audio.seekable.end(audio.seekable.length - 1);
-
-  //   const setSliderMax = () => {
-  //     seekSlider.max = Math.floor(audio.duration);
-  //   };
-
-  //   if (audio.readyState > 0) {
-  //     displayDuration();
-  //     setSliderMax();
-  //   } else {
-  //     audio.addEventListener("loadedmetadata", () => {
-  //       displayDuration();
-  //       setSliderMax();
-  //     });
-  //   }
 </script>
