--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -1,49 +1,17 @@
+---
+import DownloadIcon from "./icons/downloadIcon.astro";
+import PlayIcon from "./icons/playIcon.astro";
+import PauseIcon from "./icons/pauseIcon.astro";
+---
+
 <div id="audio-player-container" class="w-full bottom-0 sticky bg-base-100 flex px-5 h-16 items-center">
   <audio src="/audio/musica.mp3" preload="metadata"></audio>
   <button id="play-icon">
     <div id="play-icon-svg">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-player-play-filled"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path
-          d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z"
-          stroke-width="0"
-          fill="currentColor"></path>
-      </svg>
+      <PlayIcon />
     </div>
     <div id="pause-icon-svg" class="hidden">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-player-pause-filled"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path
-          d="M9 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
-          stroke-width="0"
-          fill="currentColor"></path>
-        <path
-          d="M17 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z"
-          stroke-width="0"
-          fill="currentColor"></path>
-      </svg>
+      <PauseIcon />
     </div>
   </button>
   <span id="current-time" class="ml-5 mr-2">0:00</span>/
@@ -110,7 +78,12 @@
       </svg>
     </button>
     <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
-      <li><a>Download</a></li>
+      <li>
+        <a>
+          <DownloadIcon />
+          Download</a
+        >
+      </li>
     </ul>
   </div>
 </div>
