--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -2,61 +2,33 @@
 import DownloadIcon from "./icons/downloadIcon.astro";
 import PlayIcon from "./icons/playIcon.astro";
 import PauseIcon from "./icons/pauseIcon.astro";
+import AudioIcon from "./icons/audioIcon.astro";
+import AudioMutedIcon from "./icons/audioMutedIcon.astro";
 ---
 
 <div id="audio-player-container" class="w-full bottom-0 sticky bg-base-100 flex px-5 h-16 items-center">
   <audio src="/audio/musica.mp3" preload="metadata"></audio>
-  <button id="play-icon">
-    <div id="play-icon-svg">
+  <label class="swap">
+    <input type="checkbox" id="play-icon" />
+    <div id="play-icon-svg" class="swap-off">
       <PlayIcon />
     </div>
-    <div id="pause-icon-svg" class="hidden">
+    <div id="pause-icon-svg" class="swap-on">
       <PauseIcon />
     </div>
-  </button>
+  </label>
   <span id="current-time" class="ml-5 mr-2">0:00</span>/
   <span id="duration" class="ml-2">0:00</span>
   <input id="seek-slider" type="range" min="0" max="100" value="0" class="range range-xs mx-5" />
-  <button id="mute-icon" class="ml-5">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="icon icon-tabler icon-tabler-volume"
-      width="24"
-      height="24"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <path d="M15 8a5 5 0 0 1 0 8"></path>
-      <path d="M17.7 5a9 9 0 0 1 0 14"></path>
-      <path d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5"
-      ></path>
-    </svg>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="icon icon-tabler icon-tabler-volume-off hidden"
-      width="24"
-      height="24"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <path d="M15 8a5 5 0 0 1 1.912 4.934m-1.377 2.602a5 5 0 0 1 -.535 .464"></path>
-      <path d="M17.7 5a9 9 0 0 1 2.362 11.086m-1.676 2.299a9 9 0 0 1 -.686 .615"></path>
-      <path
-        d="M9.069 5.054l.431 -.554a.8 .8 0 0 1 1.5 .5v2m0 4v8a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l1.294 -1.664"
-      ></path>
-      <path d="M3 3l18 18"></path>
-    </svg>
-  </button>
+  <label class="ml-5 swap">
+    <input id="mute-icon" type="checkbox" />
+    <div class="swap-off">
+      <AudioIcon />
+    </div>
+    <div class="swap-on">
+      <AudioMutedIcon />
+    </div>
+  </label>
   <div class="dropdown dropdown-top dropdown-end ml-5 h-6">
     <button tabindex="0">
       <svg
@@ -130,13 +102,13 @@ import PauseIcon from "./icons/pauseIcon.astro";
   playIconContainer.addEventListener("click", () => {
     if (playState === "play") {
       audio.play();
-      pauseIcon.classList.remove("hidden");
-      playIcon.classList.add("hidden");
+      // pauseIcon.classList.remove("hidden");
+      // playIcon.classList.add("hidden");
       playState = "pause";
     } else {
       audio.pause();
-      playIcon.classList.remove("hidden");
-      pauseIcon.classList.add("hidden");
+      // playIcon.classList.remove("hidden");
+      // pauseIcon.classList.add("hidden");
       playState = "play";
     }
   });
