adding dynamic audio to podcasts

--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -7,7 +7,7 @@ import AudioMutedIcon from "./icons/audioMutedIcon.astro";
 ---
 
 <div id="audio-player-container" class="w-full bottom-0 sticky bg-base-100 flex px-5 h-16 items-center">
-  <audio src="/audio/musica.mp3" preload="metadata"></audio>
+  <audio src="/audio/audio2.m4a" preload="metadata"></audio>
   <label class="swap">
     <input type="checkbox" id="play-icon" />
     <div id="play-icon-svg" class="swap-off">
