--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,7 +1,9 @@
 ---
-const { title, cover, desc, url } = Astro.props;
+const { title, cover, desc, url, audioUrl, id } = Astro.props;
 import { Image } from "@astrojs/image/components";
 import astropodConf from "../../astropod.conf.cjs";
+import PlayIcon from "./icons/playIcon.astro";
+import PauseIcon from "./icons/pauseIcon.astro";
 
 let cover_url = cover ? cover : astropodConf.cover;
 ---
@@ -15,12 +17,15 @@ let cover_url = cover ? cover : astropodConf.cover;
       </h1>
       <p class="py-1 text-1xl">{desc}</p>
     </div>
-    <button class="btn btn-circle mx-2">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-player-play-filled" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" stroke-width="0" fill="currentColor"></path>
-     </svg>
-    </button>
+    <label class="btn btn-circle mx-2 swap">
+      <input type="checkbox" class="card-pay-buttons" id={id} data-audio-url={audioUrl} />
+      <div class="swap-off">
+        <PlayIcon />
+      </div>
+      <div class="swap-on">
+        <PauseIcon />
+      </div>
+    </label>
   </div>
   <hr class="my-3" />
 </div>
