--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,10 @@ const last_posts = posts.slice(0, 3);
           title={post.data.title}
           img={post.data.cover}
           desc={post.data.description}
-          url={"/blog/" + post.slug}
+          url={"/podcast/" + post.slug}
           audioUrl={post.data.audioUrl}
-          target="_self"
+          pubDate={post.data.pubDate}
+          duration={post.data.duration}
           badge={post.data.badge}
           id={"card-" + index}
         />
