--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -37,5 +37,5 @@ const displayDate = dayjs(pubDate).format("ll");
       </div>
     </label>
   </div>
-  <hr class="my-3" />
+  <hr class="my-3 border-base-content opacity-[.15]" />
 </div>
