adding remote song to test improving headercard links

--- a/src/components/HeaderCard.astro
+++ b/src/components/HeaderCard.astro
@@ -22,13 +22,12 @@ import ApplePodcastIcon from "./icons/applePodcastIcon.astro";
         </div>
       </div>
     </div>
-
     <img class="-mt-28 border-4 z-10 relative border-base-100 rounded-lg mx-11 w-40 h-40" src={astropodConf.cover} />
   </div>
 
   <div class="flex -mt-12 px-4 pl-52">
-    <button class="btn btn-ghost m-1 justify-self-start"> Home</button>
-    <button class="btn btn-ghost m-1 justify-self-end"> About</button>
+    <a href="/" class="btn btn-ghost m-1 justify-self-start"> Home</a>
+    <a href="about" class="btn btn-ghost m-1 justify-self-end"> About</a>
 
     <div class="grow"></div>
 
