--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -15,7 +15,7 @@ const displayDate = dayjs(pubDate).format("ll");
 ---
 
 <div class="">
-  <div class="hero-content flex-col md:flex-row">
+  <div class="hero-content flex-row">
     <Image src={cover_url} aspectRatio="1:1" width={100} format="webp" alt={title} class="shadow-lg rounded-md" />
     <div class="grow w-full">
       <h2 class="text-xl font-semibold">
