--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -14,7 +14,7 @@ let cover_url = cover ? cover : astropodConf.cover;
 const displayDate = dayjs(pubDate).format("ll");
 ---
 
-<div class="">
+<div class="podcast-card">
   <div class="hero-content flex-row">
     <img src={cover_url} alt={title} class="shadow-lg rounded-md w-20 h-20 md:w-24 md:h-24">
     <!-- <Image src={cover_url} aspectRatio="1:1" width={96} format="webp" alt={title} class="shadow-lg rounded-md w-18 h-18 md:w-24 md:h-24" /> -->
@@ -40,3 +40,9 @@ const displayDate = dayjs(pubDate).format("ll");
   </div>
   <hr class="my-3 border-base-content opacity-[.15]" />
 </div>
+
+<style>
+  .podcast-card:last-child hr{
+    display: none;
+  }
+</style>
