--- a/src/layouts/PodcastLayout.astro
+++ b/src/layouts/PodcastLayout.astro
@@ -1,36 +1,23 @@
 ---
-import { PodcastSchema } from "../content/config";
+import { podcastSchema } from "../content/config";
 import BaseLayout from "./BaseLayout.astro";
 import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 import HeaderCard from "../components/HeaderCard.astro";
+import astropodConf from "../../astropod.conf.cjs";
 
-export interface Props extends PodcastSchema {}
+export interface Props extends podcastSchema {}
 
-const { title, description, pubDate, updatedDate, cover, badge } = Astro.props;
+const { title, description, pubDate, updatedDate, cover } = Astro.props;
 dayjs.extend(localizedFormat);
 const displayDate = dayjs(pubDate).format("ll");
-
 ---
 
 <BaseLayout title={title} description={description} image={cover}>
-  <HeaderCard title={title} description={description} image={cover} />
+  <HeaderCard title={title} subtitle={astropodConf.name} image={cover} />
 
   <main class="md:flex md:justify-center">
-    <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
-      <h1 class="title my-2 text-4xl font-bold">{title}</h1>
-      {pubDate && <time>{displayDate}</time>}
-      <br />
-      {badge && <div class="badge badge-secondary my-1">{badge}</div>}
-      {
-        updatedDate && (
-          <div>
-            {" "}
-            Last updated on <time>{updatedDate}</time>{" "}
-          </div>
-        )
-      }
-      <div class="divider my-2"></div>
+    <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
       <slot />
     </article>
   </main>
