--- a/src/pages/podcast/[slug].astro
+++ b/src/pages/podcast/[slug].astro
@@ -1,30 +1,44 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
-import { BlogSchema } from '../../content/config';
-import PostLayout from '../../layouts/PodcastLayout.astro';
+import { CollectionEntry, getCollection } from "astro:content";
+import { podcastSchema } from "../../content/config";
+import PodcastLayout from "../../layouts/PodcastLayout.astro";
+import AudioPlayer from "../../components/audioPlayer.astro";
 
 export async function getStaticPaths() {
-    const postEntries = await getCollection('podcast');
-    return postEntries.map(entry => ( { 
-        params: { slug: entry.slug }, props: { entry },
-    } ));
+  const postEntries = await getCollection("podcast");
+  return postEntries.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
+  }));
 }
 
 interface Props {
-    entry: CollectionEntry<"podcast">;
+  entry: CollectionEntry<"podcast">;
 }
 
 const { entry } = Astro.props;
-const post : PodcastSchema = entry.data;
+const podcast: podcastSchema = entry.data;
 const { Content } = await entry.render();
 ---
 
-<PostLayout 
-    title={post.title} 
-    description={post.description} 
-    pubDate={post.pubDate} 
-    heroImage={post.heroImage} 
-    updatedDate={post.updatedDate} 
-    badge={post.badge}>
-    <Content/>
-</PostLayout>
+<PodcastLayout
+  title={podcast.title}
+  description={podcast.description}
+  pubDate={podcast.pubDate}
+  updatedDate={podcast.updatedDate}
+>
+  <Content />
+</PodcastLayout>
+
+<AudioPlayer />
+
+<script define:vars={{ podcast }}>
+const musicPlayer = document.getElementById("audio-player-container");
+const audioDownloadLink = document.getElementById("audio-download-link");
+
+musicPlayer?.classList.remove("hidden", "opacity-0");
+musicPlayer?.classList.add("flex");
+const audio = document.querySelector("audio");
+audio.src = podcast.audioUrl;
+audioDownloadLink.href = podcast.audioUrl;
+</script>
