creating about page

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -19,7 +19,7 @@ const displayDate = dayjs(pubDate).format("ll");
     </a>
     <div class="grow w-full">
       <a href={url}>
-        <h2 class="text-xl font-semibold truncate">
+        <h2 class="md:text-xl text-lg font-semibold truncate">
           {title}
         </h2>
         <p class="text-sm font-medium opacity-60">
