changing astropod to mjs

--- a/src/components/HeaderCard.astro
+++ b/src/components/HeaderCard.astro
@@ -1,6 +1,6 @@
 ---
 const { title, subtitle } = Astro.props;
-import astropodConf from "../../astropod.conf.cjs";
+import astropodConf from "../../astropod.conf.mjs";
 import TwitterIcon from "./icons/twitterIcon.astro";
 import YoutubeIcon from "./icons/youtubeIcon.astro";
 import TelegramIcon from "./icons/telegramIcon.astro";
