--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
-import astropodConf from "../../astropod.conf.cjs";
+import astropodConf from "../../astropod.conf.mjs";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
