--- a/src/layouts/PodcastLayout.astro
+++ b/src/layouts/PodcastLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 import HeaderCard from "../components/HeaderCard.astro";
-import astropodConf from "../../astropod.conf.cjs";
+import astropodConf from "../../astropod.conf.mjs";
 
 const { title, description, pubDate, cover } = Astro.props;
 dayjs.extend(localizedFormat);
