--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import PodcastLayout from "../layouts/PodcastLayout.astro";
-import astropodConf from "../../astropod.conf.cjs";
+import astropodConf from "../../astropod.conf.mjs";
 import { Content as AboutContent } from "../content/web/about.md";
 ---
 
