--- a/src/layouts/PodcastLayout.astro
+++ b/src/layouts/PodcastLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
-import HeaderCard from "../components/HeaderCard.astro";
+import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import astropodConf from "../../astropod.conf.mjs";
 
 const { title, description, pubDate, cover } = Astro.props;
