--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import astropodConfig from "../../astropod.conf.mjs";
-import HeaderCard from "../components/HeaderCard.astro";
+import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import AudioPlayer from "../components/audioPlayer.astro";
 import HorizontalCardsScript from "../components/HorizontalCardsScript.astro";
 
