improving feed rss and header menu items

--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -1,9 +1,10 @@
 ---
 const { title, subtitle } = Astro.props;
-import astropodConf from "../../../astropod.conf.mjs";
+import astropodConf from "../../../astropod.config.mjs";
 
 import ListenOnMenu from "./listenOnMenu.astro";
 import FollowUsMenu from "./followUsMenu.astro";
+import RssIcon from "../icons/rssIcon.astro";
 ---
 
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3">
@@ -35,24 +36,8 @@ import FollowUsMenu from "./followUsMenu.astro";
 
     <FollowUsMenu />
 
-    <button class="btn btn-ghost btn-square m-1">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-rss"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M5 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
-        <path d="M4 4a16 16 0 0 1 16 16"></path>
-        <path d="M4 11a9 9 0 0 1 9 9"></path>
-      </svg>
-    </button>
+    <a href="/rss.xml" class="btn btn-ghost btn-square m-1">
+      <RssIcon />
+    </a>
   </div>
 </div>
