--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout>
-  <HeaderCard title={astropodConfig.name} subtitle={astropodConfig.owner} />
+  <HeaderCard title={astropodConfig.name} subtitle={astropodConfig.author} />
 
   <div class="card min-w-full bg-base-100 shadow-md p-3 pb-3 mt-12">
     {
